2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 03374] disable_secret_security_check
	* etc.c (openSecurityFile): disable_secret_security_check
	* fm.h (disable_secret_security_check): added
	* rc.c (CMT_DISABLE_SECRET_SECURITY_CHECK): added
		(disable_secret_security_check): added
	* NEWS: rc: disable_secret_security_check

2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: update

2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>

	* rc.c (CMT_PRE_FORM_FILE): added
		(pre_form_file): added

2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>
	
	* doc-jp/README.tab: added [w3m-dev 03372]
	* doc/README.tab: brief translation

2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03372] tab browser
	* display.c (displayBuffer): add ny
				rootY offset by tab
				tab line
		(cursorDown): offset rootY
		(arrangeCursor): offset rootY
	* etc.c (columnSkip): offset rootY
		(lineSkip): offset rootY
		(currentLineSkip): offset rootY
	* file.c (HTMLlineproc2body): ATTR_TARGET
	* fm.h (MapArea): add target
		(Buffer): add rootY
		(TabBuffer): added
		(Currentbuf): comment out
		(Firstbuf): comment out
		(CurrentTab): added
		(FirstTab): added
		(LastTab): added
		(open_tab_blank): added
		(close_tab_back): added
		(nTab): added
		(TabCols): added
		(N_TAB): added
		(Currentbuf): CurrentTab->currentBuffer
		(Firstbuf): CurrentTab->firstBuffer
	* funcname.tab (CLOSE_TAB): added
		(NEW_TAB): added
		(NEXT_TAB): added
		(PREV_TAB): added
		(TAB_GOTO): added
		(TAB_GOTO_RELATIVE): added
		(TAB_LEFT): added
		(TAB_LINK): added
		(TAB_MENU): added
		(TAB_RIGHT): added
	* html.c (ALST_AREA): add ATTR_TARGET
	* image.c (showImageProgress): offset rootY
	* main.c (_newT): added
		(followTab): added
		(moveTab): added
		(check_target): added
		(MAIN): init tab related values
			buf => tab
		(nscroll): offset rootY
		(pgFore): offset rootY
		(pgBack): offset rootY
		(ctrCsrV): offset rootY
		(_movD): offset rootY
		(_movU): offset rootY