@@ -7113,7 +7113,7 @@ doExternal(URLFile uf, char *path, char *type, Buffer **bufp,
 	    fmTerm();
 	    mySystem(command->ptr, 0);
 	    fmInit();
-	    if (Currentbuf)
+	    if (CurrentTab && Currentbuf)
 		displayBuffer(Currentbuf, B_FORCE_REDRAW);
 	}
 	else {
