@@ -1,3 +1,10 @@
+2002-11-06  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
+
+	* [w3m-dev 03375] NULL check of CurrentTab
+	* display.c (disp_message_nsec): check CurrentTab
+	* file.c (doExternal): check CurrentTab
+	* image.c (loadImage): check CurrentTab
+
 2002-11-06  Fumitoshi UKAI  <ukai@debian.or.jp>
 
 	* [w3m-dev 03374] disable_secret_security_check
